# SYSC5807-Rust-Implementation-of-Light-Weight-Cryptography-Ciphers

./: Cargo.toml
acorn/: Cargo.toml
acorn/src/: acorn_core.rs  lib.rs
ascon/: Cargo.toml
ascon/src/: ascon_128.rs  ascon_core.rs  lib.rs
benchmarks/: Cargo.toml
benchmarks/src/: acorn.rs  aes_gcm.rs  ascon.rs  xoodyak.rs
xoodyak/: Cargo.toml
xoodyak/src/: lib.rs  xoodoo.rs  xoodyak.rs
